[DBE-025] Update order
